test-data/src/main/java/ma/markware/charybdis/test/entities/invalid/DuplicateTestUdt.java
package ma.markware.charybdis.test.entities.invalid;

import ma.markware.charybdis.model.annotation.Udt;
import ma.markware.charybdis.model.annotation.UdtField;

@Udt(keyspace = "test_keyspace", name = "test_udt")
public class DuplicateTestUdt {

  @UdtField
  private String value;

  public String getValue() {
    return value;
  }

  public void setValue(final String value) {
    this.value = value;
  }
}
